tests/ui/parser/removed-syntax-fn-sigil.rs
fn main() {
    let x: fn~() = || (); //~ ERROR expected `(`, found `~`
}
